objects/redwing__Learning_Prerequisite__c.object
<CustomObject>
    <fields>
        <fullName>redwing__Achievement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Achievement</label>
        <referenceTo>redwing__Achievement__c</referenceTo>
        <relationshipName>Prerequisite_Parent_Objects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>redwing__Learning__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Learning</label>
        <referenceTo>redwing__Learning__c</referenceTo>
        <relationshipName>Prerequisite_Parent_Objects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>redwing__Prerequisite__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Prerequisite</label>
        <referenceTo>redwing__Prerequisite__c</referenceTo>
        <relationshipLabel>Learning Prerequisites</relationshipLabel>
        <relationshipName>Prerequisite_Parents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>redwing__Training_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Learning Plan</label>
        <referenceTo>redwing__Training_Plan__c</referenceTo>
        <relationshipLabel>Learning Prerequisite</relationshipLabel>
        <relationshipName>Learning_Prerequisite</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>redwing__Training_Track__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Learning Trac</label>
        <referenceTo>redwing__Training_Track__c</referenceTo>
        <relationshipLabel>Learning Prerequisite</relationshipLabel>
        <relationshipName>Learning_Prerequisite</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Learning Prerequisite</label>
    <nameField>
        <displayFormat>LPN-{0}</displayFormat>
        <label>Learning Prerequisite Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Learning Prerequisites</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>